<resources>
    <string name="app_name">极简天气</string>

    <!-- main !-->
    <string name="home">极简天气</string>
    <string name="format_header">%s, 今天是%d年%d月%d日, %s</string>
    <string name="morning">上午好</string>
    <string name="noon">中午好</string>
    <string name="afternoon">下午好</string>
    <string name="night">晚上好</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="footer_hint">长按可删除, 点击右下角按钮添加城市</string>
    <string name="by_search">网络查找</string>
    <string name="by_region">区域查找</string>
    <string name="delete_title">注意</string>
    <string name="delete_msg">您要删除%s这个城市吗？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>

    <!-- region !-->
    <string name="search_province_failed">抱歉, 未查询到省份</string>

    <!--search!-->
    <string name="search">搜索</string>
    <string name="search_hint">请输入城市名(中文/拼音等)</string>
    <string name="search_city_failed">抱歉, 未查询到城市</string>

    <!-- detail !-->
    <string name="detail_predict">天气详情</string>
    <string name="car_wash">洗车指数</string>
    <string name="dressing">穿衣建议</string>
    <string name="flu">感冒几率</string>
    <string name="sport">运动适宜度</string>
    <string name="travel">旅游指数</string>
    <string name="uv">紫外线强度</string>
    <string name="get_life_failed">抱歉, 没有查到生活指数</string>
    <string name="get_daily_failed">抱歉, 没有查到逐日预报</string>
    <string name="format_desc">%s，%d℃</string>
    <string name="today">今天</string>
    <string name="format_wind_scale">%d级</string>

    <!-- adapter home !-->
    <string name="default_name">- -</string>
    <string name="default_text">- - - -</string>
    <string name="default_temperature">--℃</string>
    <string name="default_time">--:--</string>
    <string name="format_update">数据更新于%s</string>

    <!-- adapter city !-->
    <string name="format_timezone">时区：%s</string>

</resources>
