<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingStart="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/default_text"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/desc"
                android:src="@mipmap/ic_weather_99" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/default_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/desc"
                android:gravity="end"
                android:text="@string/default_temperature"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:textColor="@color/colorSecondaryText"
                android:textSize="10sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>