<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_action_arrow_back"
            app:title="@string/detail_predict"
            app:titleTextColor="@android:color/white" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="15dp"
                android:paddingStart="15dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@mipmap/ic_weather_99" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/default_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/default_text"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="14sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:divider="@null"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:alignmentMode="alignMargins"
                    app:columnCount="3"
                    app:rowCount="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_row="0">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/car_wash"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_car_wash" />

                        <TextView
                            android:id="@+id/car_wash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_row="0">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dressing"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_dress" />

                        <TextView
                            android:id="@+id/dressing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="2"
                        app:layout_columnWeight="1"
                        app:layout_row="0">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flu"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_flu" />

                        <TextView
                            android:id="@+id/flu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_row="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sport"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_sport" />

                        <TextView
                            android:id="@+id/sport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_row="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/travel"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_travel" />

                        <TextView
                            android:id="@+id/travel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_column="2"
                        app:layout_columnWeight="1"
                        app:layout_row="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uv"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="4dp"
                            android:src="@mipmap/ic_uv" />

                        <TextView
                            android:id="@+id/uv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/default_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp" />
                    </LinearLayout>
                </android.support.v7.widget.GridLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>